# ghost_dev

./: .env  .env.development  .env.production  .gitignore  .htaccess  .npmrc  Cargo.toml  DEPLOYMENT.md  README.md  _headers  canister_ids.json  cleanup_frontend.sh  dfx.json  dfx.production.json  index.html  jest.setup.ts  netlify.toml  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vessel.dhall  vite.config.ts  vitest.config.ts
.dfx/local/: canister_ids.json  wallets.json
.github/workflows/: e2e-tests.yml
app/: layout.tsx  page.tsx  providers.tsx
app/components/: TokenList.tsx  TokenProofGenerator.tsx  WalletConnect.tsx
app/services/: canister-service.ts  proof-service.ts  token-service.ts  wallet-service.ts
backend/: Cargo.toml  backend.did  zk_canister.did
backend/main_canister/: Cargo.toml  main_canister.did
backend/main_canister/src/: lib.rs
backend/src/: lib.rs
backend/zk_canister/: Cargo.toml  zk_canister.did
backend/zk_canister/src/: lib.rs
circuits/: Nargo.toml  Prover.toml  README.md  generate_test_data.js  package-lock.json  package.json
docs/: milestone1.md
e2e/: canister-integration.spec.ts  token-proof.spec.ts  wallet.spec.ts
playwright-report/: index.html
public/: wallet-config.json
scripts/: build_circuit.sh  deploy.sh  generate-declarations.sh  package-lock.json  package.json  rollback.sh  run_milestone1_test.sh  test_milestone1.ts  test_zk_canister.ts  test_zkp.sh  tsconfig.json
src/: App.tsx  api.ts  error.tsx  index.css  main.tsx  types.d.ts  types.ts
test_deploy/: dfx.json  main.mo
(+450 files in other folders)
