[package]
name = "ghost_agent_icp"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.7"
ic-cdk-macros = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.8.4"
uuid = { version = "1.3.0", features = ["v4", "js"] }
getrandom = { version = "0.2.10", features = ["js"] }
ark-groth16 = "0.3"
ark-std = "0.3"
ark-crypto-primitives = "0.3"
ic-stable-structures = "0.5"
blake2 = "0.10"
thiserror = "1.0"